css fix: body padding on mobile - 0.2rem

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -311,6 +311,9 @@ footer{
     .btn-cont{
         flex-direction: column;
     }
+     body{
+        padding: 0.2rem;
+    }
 }
 @media(max-width:530px){
      .color-input-wrapper{
